--- a/themes/ios/common.css
+++ b/themes/ios/common.css
@@ -45,12 +45,15 @@
   border: 0;
   padding: 0;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
 }
 .d-popup > * {
   box-sizing: border-box;
-  height: inherit;
-  width: inherit;
+}
+.d-popup > .d-centered {
+  max-height: 90vh;
+  max-width: 90vh;
 }
 .d-tooltip-dialog-popup,
 .d-date-picker-popup {
